fix font and scroll issue on safari

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     padding: 0;
     box-sizing: border-box;
     color: white;
-    font-family: future;
+    font-family: futura;
 }
 
 body {
@@ -106,11 +106,11 @@ body {
 
 .image-plain {
     clip-path: polygon(30% 0%, 100% 0%, 100% 100%, 0% 100%);
-    height: 100%;
 }
 
 .image-plain__wrapper {
     position: relative;
+    display: flex;
 }
 
 
@@ -119,6 +119,13 @@ body {
     bottom: 36px;
     margin-top: 10vh;
     opacity: 0.7;
+}
+
+@media screen and (max-width: 1200px) {
+    .title {
+        font-size: 80px;
+        line-height: 100%;
+    }
 }
 
 @media screen and (max-width: 900px) {
